# Vending-Machine

Vending Machine/: CMakeLists.txt  filelist.txt
Vending Machine/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_img_qr_code.c  ui_comp_img_qr_code.h
Vending Machine/images/: ui_img_download_png.c  ui_img_img_arrow_right_png.c  ui_img_img_bg_1_png.c  ui_img_img_btc_png.c  ui_img_img_card_png.c  ui_img_img_eth_png.c  ui_img_img_pos_png.c  ui_img_img_qr_png.c  ui_img_img_xrp_png.c  ui_img_ok_png.c
